--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>  
 
 <body class="container">
-		<h1>Matisova Anastasiia-QA engineer</h1>
+		<h1>Matisova Anastasiia-QA engineer🦒</h1>
 
 		<div class="item">
 			<img class="photo" src="аватар (1).jpg" width="170" height="170" alt="фото">
